--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -413,50 +413,6 @@ var achcomp70 = 0
 //var achtitle65 = ":("
 //var achdesc65 = "Edit a name, and change it."
 //var achcomp65 = 0
-/* old */
-/* pressing milestones */
-//var achpps = 0; //each achievement is a OoM milestone, but 1 is one. "raking in the money"
-//var achtotal = 0; //each achievement is a OoM milestone, but 1 is one. "rich in total"
-/* (scrapped) var achheld = 0; //each achievement is a OoM milestone, but is at the half way point of achievementpps's milestones. "rich on hand" */
-/* building */
-//var achcursor = 0; //each achievement is a custom milestone, from 1 to 7, it is 1, 5, 25, 100, 250, 500, 1000. "More cursors, more techniques, more power"
-//var achmother = 0; //each achievement is a custom milestone, from 1 to 7, it is 1, 5, 25, 100, 250, 500, 1000. "Endless your mother jokes"
-/* progression */
-//var achanti = 0; //unique achievement, first dimension hop.
-//var achpres = 0; //each achievement is a custom milestone, from 1 (formally to 14, it is 1, 5, 25, 50, 75, 100, 250, 500, 750, 1000, 2500, 5000, 7500, 10000.) "My money is in another realm, sorry"
-//var achasc = 0; //each achievement is a custom milestone, from 1 (formally to 15, it is 1, 5, 10, 25, 50, 75, 100, 125, 250, 375, 500, 750, 1000, 1250, 1337.) "My stuff is in another realm, sorry"
-//var secscammer = 0; //secret achievement, accomplish everything (but this). "100%!! wait, there's more?"
-/* easter eggs */
-//var eggcookie = 0; //secret achievement, find the cookie. "who said a cookie clicker clone didn't have references?"
-//var eggbirthday = 0; //secret achievement, play on the game's birthday! (February 15th, 2022) probably the hardest to get legit. "Today is the game's birthday!"
-// var eggmother = 0; //secret achievement, witness the 1 in a million your mother joke. "AHHAHAHAHAH SO FUNNY XDDD" nope already did a your mother joke
-//var eggcursor = 0; //secret achievement, click on the cursor text. 1000 times. that's it. why would anyone do this. "Were you trying to get a cursor? because it worked... almost."
-//var eggcursorpresses = 0; //needed for above
-//var eggegg = 0; //holiday secret achievement, find the 不可能的 egg, in 1 minute. "嗯不是那么不可能吧！！！"
-/* easter */
-//var achshegg = 0; //holiday achievement, find the shining egg. "it like to be in your face. literally."
-//var achegg = 0; //holiday achievement, find the normal egg. "it likes trades."
-//var achhaegg = 0; //holiday achievement, find the midnight egg. "it likes the 0th hour."
-//var achimpegg = 0; //holiday achievement, find the 不可能的 egg. "它喜欢成为隐藏最好的（祝你好运）" means "It likes to be the best at hiding (good luck)"
-//var achgoegg = 0; //holiday achievement, find the gold egg. "it likes large amounts of presses"
-//var achieggment = 0; //holiday achievement, find ALL eggs. unlocks a trophy "eg"
-/* holiday */
-//var achdeco1 = 0; //holiday achievement, decorate the button "Dashing through the snow, in a one-horse open sleigh. O'er the fields we go, pressing all the way!"
-//var achdeco2 = 0; //holiday achievement, buy a tree. "Grandma got run over by a reindeer. Walking home from pressing, Christmas Eve"
-//var achdeco3 = 0; //holiday achievement, buy lights for the christmas tree. "Rockin' around the Christmas tree, at the pressing christmas event."
-//var achdeco4 = 0; //holiday achievement, buy a fireplace. "Staying warm, especially on Christmas, is important."
-//var achdeco5 = 0; //holiday achievement, buy christmas stockings. "Have a holly, jolly christmas! It's the best pressing time of the year."
-//var achsanta = 0; //holiday achievement, play on christmas day! Santa has arrived. "Merry Christmas!"
-/* secret */
-//var secfrown = 0; //secret achievement, inspect element the credits, then edit any name. ":("
-//var seccheater = 0; //secret achievement, be a dirty cheater. "i'm telling mom"
-//var seclilsweat = 0; //secret achievement, start the game, and get 1 million in 15 minutes. "wow, that was fast."
-//var secsweat = 0; //secret achievement, start the game, and get 1 million in 10 minutes. "ok, you can slow down now."
-//var secbigsweat = 0; //secret achievement, start the game, and get 1 million in 5 minutes. "oh my god, how are you so fast?!?"
-/* insane (please for the love of god don't actively get these.) */
-//var secscammed = 0; //secret achievement, achieve absolutely EVERYTHING (but this). "true 100%!! wait, where's my reward?"
-//var sectootired = 0; //secret achievement, do not gain any presses in 24 hours, all in one sitting. "i'm entirely too tired. can i sleep yet?"
-/** end of all achievements **/
 document.body.onload = function(){
     loadCookie();
     updateXPmult()
@@ -901,11 +857,85 @@ document.body.onload = function(){
     console.warn("anonymityamt or lastanonymity was undefined or an invalid value!!! Old or corrupted data? Set to default. Sorry for the inconvenience!")
     }
     }
-    
     if (autoresettimer === undefined || autoresettimer<0){
     autoresettimer=0
     if (detailedoutput==1){
     console.warn("autoresettimer was undefined or an invalid value!!! Old or corrupted data? Set to default. Sorry for the inconvenience!")
+    }
+    }
+    if (achcomp1 === undefined || achcomp1<0 || achcomp1>1 || achcomp2 === undefined || achcomp2<0 || achcomp2>1 || achcomp3 === undefined || achcomp3<0 || achcomp3>1 || achcomp4 === undefined || achcomp4<0 || achcomp4>1 || achcomp5 === undefined || achcomp5<0 || achcomp5>1 || achcomp6 === undefined || achcomp6<0 || achcomp6>1 || achcomp7 === undefined || achcomp7<0 || achcomp7>1 || achcomp8 === undefined || achcomp8<0 || achcomp8>1 || achcomp9 === undefined || achcomp9<0 || achcomp9>1 || achcomp10 === undefined || achcomp10<0 || achcomp10>1 || achcomp11 === undefined || achcomp11<0 || achcomp11>1 || achcomp12 === undefined || achcomp12<0 || achcomp12>1 || achcomp13 === undefined || achcomp13<0 || achcomp13>1 || achcomp14 === undefined || achcomp14<0 || achcomp14>1 || achcomp15 === undefined || achcomp15<0 || achcomp15>1 || achcomp16 === undefined || achcomp16<0 || achcomp16>1 || achcomp17 === undefined || achcomp17<0 || achcomp17>1 || achcomp18 === undefined || achcomp18<0 || achcomp18>1 || achcomp19 === undefined || achcomp19<0 || achcomp19>1 || achcomp20 === undefined || achcomp20<0 || achcomp20>1 || achcomp21 === undefined || achcomp21<0 || achcomp21>1 || achcomp22 === undefined || achcomp22<0 || achcomp22>1 || achcomp23 === undefined || achcomp23<0 || achcomp23>1 || achcomp24 === undefined || achcomp24<0 || achcomp24>1 || achcomp25 === undefined || achcomp25<0 || achcomp25>1 || achcomp26 === undefined || achcomp26<0 || achcomp26>1 || achcomp27 === undefined || achcomp27<0 || achcomp27>1 || achcomp28 === undefined || achcomp28<0 || achcomp28>1 || achcomp29 === undefined || achcomp29<0 || achcomp29>1 || achcomp30 === undefined || achcomp30<0 || achcomp30>1 || achcomp31 === undefined || achcomp31<0 || achcomp31>1 || achcomp32 === undefined || achcomp32<0 || achcomp32>1 || achcomp33 === undefined || achcomp33<0 || achcomp33>1 || achcomp34 === undefined || achcomp34<0 || achcomp34>1 || achcomp35 === undefined || achcomp35<0 || achcomp35>1 || achcomp36 === undefined || achcomp36<0 || achcomp36>1 || achcomp37 === undefined || achcomp37<0 || achcomp37>1 || achcomp38 === undefined || achcomp38<0 || achcomp38>1 || achcomp39 === undefined || achcomp39<0 || achcomp39>1 || achcomp40 === undefined || achcomp40<0 || achcomp40>1 || achcomp41 === undefined || achcomp41<0 || achcomp41>1 || achcomp42 === undefined || achcomp42<0 || achcomp42>1 || achcomp43 === undefined || achcomp43<0 || achcomp43>1 || achcomp44 === undefined || achcomp44<0 || achcomp44>1 || achcomp45 === undefined || achcomp45<0 || achcomp45>1 || achcomp46 === undefined || achcomp46<0 || achcomp46>1 || achcomp47 === undefined || achcomp47<0 || achcomp47>1 || achcomp48 === undefined || achcomp48<0 || achcomp48>1 || achcomp49 === undefined || achcomp49<0 || achcomp49>1 || achcomp50 === undefined || achcomp50<0 || achcomp50>1 || achcomp51 === undefined || achcomp51<0 || achcomp51>1 || achcomp52 === undefined || achcomp52<0 || achcomp52>1 || achcomp53 === undefined || achcomp53<0 || achcomp53>1 || achcomp54 === undefined || achcomp54<0 || achcomp54>1 || achcomp55 === undefined || achcomp55<0 || achcomp55>1 || achcomp56 === undefined || achcomp56<0 || achcomp56>1 || achcomp57 === undefined || achcomp57<0 || achcomp57>1 || achcomp58 === undefined || achcomp58<0 || achcomp58>1 || achcomp59 === undefined || achcomp59<0 || achcomp59>1 || achcomp60 === undefined || achcomp60<0 || achcomp60>1 || achcomp61 === undefined || achcomp61<0 || achcomp61>1 || achcomp62 === undefined || achcomp62<0 || achcomp62>1 || achcomp63 === undefined || achcomp63<0 || achcomp63>1 || achcomp64 === undefined || achcomp64<0 || achcomp64>1 || achcomp65 === undefined || achcomp65<0 || achcomp65>1 || achcomp66 === undefined || achcomp66<0 || achcomp66>1 || achcomp67 === undefined || achcomp67<0 || achcomp67>1 || achcomp68 === undefined || achcomp68<0 || achcomp68>1 || achcomp69 === undefined || achcomp69<0 || achcomp69>1 || achcomp70 === undefined || achcomp70<0 || achcomp70>1){
+    achcomp1=0
+    achcomp2=0
+    achcomp3=0
+    achcomp4=0
+    achcomp5=0
+    achcomp6=0
+    achcomp7=0
+    achcomp8=0
+    achcomp9=0
+    achcomp10=0
+    achcomp11=0
+    achcomp12=0
+    achcomp13=0
+    achcomp14=0
+    achcomp15=0
+    achcomp16=0
+    achcomp17=0
+    achcomp18=0
+    achcomp19=0
+    achcomp20=0
+    achcomp21=0
+    achcomp22=0
+    achcomp23=0
+    achcomp24=0
+    achcomp25=0
+    achcomp26=0
+    achcomp27=0
+    achcomp28=0
+    achcomp29=0
+    achcomp30=0
+    achcomp31=0
+    achcomp32=0
+    achcomp33=0
+    achcomp34=0
+    achcomp35=0
+    achcomp36=0
+    achcomp37=0
+    achcomp38=0
+    achcomp39=0
+    achcomp40=0
+    achcomp41=0
+    achcomp42=0
+    achcomp43=0
+    achcomp44=0
+    achcomp45=0
+    achcomp46=0
+    achcomp47=0
+    achcomp48=0
+    achcomp49=0
+    achcomp50=0
+    achcomp51=0
+    achcomp52=0
+    achcomp53=0
+    achcomp54=0
+    achcomp55=0
+    achcomp56=0
+    achcomp57=0
+    achcomp58=0
+    achcomp59=0
+    achcomp60=0
+    achcomp61=0
+    achcomp62=0
+    achcomp63=0
+    achcomp64=0
+    achcomp65=0
+    achcomp66=0
+    achcomp67=0
+    achcomp68=0
+    achcomp69=0
+    achcomp70=0
+    if (detailedoutput==1){
+    console.warn("achievements was undefined or an invalid value!!! Old or corrupted data? Set to default. Sorry for the inconvenience!")
     }
     }
     // replace if statement with this when implemented in v0.2 //if (squeezeamt === undefined || lastsqueeze === undefined || lastsqueeze < firstLaunch || lastsqueeze > firstLaunch && squeezeamt == 0 || lastsqueeze == firstLaunch && squeezeamt>0){
