--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -5812,7 +5812,7 @@ document.getElementById("exportastext").innerText=saveAsFile
 function importtext(){
 document.getElementById("import").remove()
 document.getElementById("importBack").remove()
-var decodeSave = document.getElementById("exportastext").innerText
+var decodeSave = document.getElementById("importastext").innerText
 var decodedSave = base64decode(decodeSave)
 var saveLoadin1 = decodedSave
 var saveLoadin2 = saveLoadin1.split(';');
