--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -874,7 +874,7 @@ document.body.onload = function(){
     console.warn("autoresettimer was undefined or an invalid value!!! Old or corrupted data? Set to default. Sorry for the inconvenience!")
     }
     }
-    if (pressfuel === undefined || pressfuel<0 || fuelcost0 === undefined || fuelcost0<=0 || prestigefuel === undefined || prestigefuel<0 || fuelcost1 === undefined || fuelcost1<=0 || ascendfuel === undefined || ascendfuel<0 || fuelcost2 === undefined || fuelcost2<=0 || antipressfuel === undefined || antipressfuel<0 || fuelcost3 === undefined || fuelcost3<=0 || anonymityfuel === undefined || anonymityfuel<0 || fuelcost4 === undefined || fuelcost4<=0 || ){
+    if (pressfuel === undefined || pressfuel<0 || fuelcost0 === undefined || fuelcost0<=0 || prestigefuel === undefined || prestigefuel<0 || fuelcost1 === undefined || fuelcost1<=0 || ascendfuel === undefined || ascendfuel<0 || fuelcost2 === undefined || fuelcost2<=0 || antipressfuel === undefined || antipressfuel<0 || fuelcost3 === undefined || fuelcost3<=0 || anonymityfuel === undefined || anonymityfuel<0 || fuelcost4 === undefined || fuelcost4<=0){
     pressfuel=0
     fuelcost0=0
     prestigefuel=0
