--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -2471,7 +2471,7 @@ function updateDebug(){
     }
 }
 function updateShop(){
-    document.getElementById("fuelmult").innerText="Fuel Multiplier: x"+(pressfuel*prestigefuel*ascendfuel*antipressfuel*anonymityfuel)+"
+    document.getElementById("fuelmult").innerText="Fuel Multiplier: x"+(pressfuel*prestigefuel*ascendfuel*antipressfuel*anonymityfuel)
     document.getElementById("item0count").innerText=" lvl "+(auto-1);
     document.getElementById("item1count").innerText=" x"+cursor;
     document.getElementById("item2count").innerText=" x"+mother;
