--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -6242,31 +6242,31 @@ document.body.appendChild(div)
 }
 function buyPressFuel(){
 presses-=fuelcost0
-pressfuel*=2
+pressfuel+=1
 fuelcost0=((fuelcost0+(pressfuel+1))*8)
 updateShop()
 }
 function buyPrestigeFuel(){
 ppoint-=fuelcost1
-prestigefuel*=2
+prestigefuel+=1
 fuelcost1=((fuelcost1+(prestigefuel+1))*4)
 updateShop()
 }
 function buyAscendFuel(){
 ascpts-=fuelcost2
-ascendfuel*=2
+ascendfuel+=1
 fuelcost2=((fuelcost2+(ascendfuel+1))*2)
 updateShop()
 }
 function buyAntiPressFuel(){
 antipresses-=fuelcost3
-antipressfuel*=2
+antipressfuel+=1
 fuelcost3=((fuelcost3+(antipressfuel+1))*4)
 updateShop()
 }
 function buyAnonymityFuel(){
 anonymity-=fuelcost4
-anonymityfuel*=2
+anonymityfuel+=1
 fuelcost4=((fuelcost4+(anonymityfuel+1))*2)
 updateShop()
 }
